[project]
name = "solve-tminiceo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "scikit-learn>=1.8.0",
    "sympy>=1.14.0",
    "tensorboard>=2.20.0",
    "transformers[torch]>=5.5.4",
    "wandb>=0.26.0",
]
